--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
-    "owasp-dependency-check": "^0.0.8",
+    "owasp-dependency-check": "^0.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
